Fix birds eye showing on mobile

--- a/cmgm/styles/Home/mobile.css
+++ b/cmgm/styles/Home/mobile.css
@@ -36,7 +36,7 @@
 
 .w-25-l {width: 50%;max-width: 100%;}
 .w-37-5 {width: 50%;max-width: 100%;}
-#link014 { display: none;}
+#link14 { display: none;}
 .gmaps_api_link {
   font-size: 0.9em;
 }
